--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         }
 
         @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
+ vv           0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-10px); }
         }
 
@@ -204,7 +204,7 @@
 
         .progress-bar {
             position: absolute;
-            top: 10px;
+v            top: 10px;
             right: 40px;
             display: flex;
             gap: 5px;
